--- a/third_html1_ywcl.html
+++ b/third_html1_ywcl.html
@@ -1306,10 +1306,10 @@
                 </div>
                 <div class="list_bg2"></div>
                 <div class="event_list2_inner2">
-                    <label for="">变更审核</label>
-                    <a href="#" class="sh1">审核通过</a>
-                    <a href="#" class="sh2">审核不通过</a>
-                    <a href="#" class="sh3">终止退回</a>
+                    <label for="">变更处理</label>
+                    <a href="#" class="sh1">保存</a>
+                    <a href="#" class="sh2" data-toggle="modal" data-target="#myModal-gongdanpf">派单</a>
+                    <a href="#" class="sh3">关闭</a>
                 </div>
             </div>
         </div>
@@ -1771,46 +1771,6 @@
                 $("div.tab_box>div") // 选取子节点
                     .eq(index).show() //显示<li>元素对应的<div>元素
                     .siblings().hide(); //隐藏其他几个同辈的<div>元素
-            });
-        });
-
-        $(".sh1").click(function() {
-            var index = layer.open({
-                title: "审核意见",
-                type: 2,
-                area: ['520px', '330px'],
-                btn: ['发布', '取消'],
-                btnAlign: 'c',
-                closeBtn: 1,
-                shadeClose: true,
-                skin: 'head-class',
-                content: 'biangeng_layer1.html'
-            });
-        });
-        $(".sh2").click(function() {
-            var index = layer.open({
-                title: "审核意见",
-                type: 2,
-                area: ['520px', '330px'],
-                btn: ['发布', '取消'],
-                btnAlign: 'c',
-                closeBtn: 1,
-                shadeClose: true,
-                skin: 'head-class',
-                content: 'biangeng_layer2.html'
-            });
-        });
-        $(".sh3").click(function() {
-            var index = layer.open({
-                title: "审核意见",
-                type: 2,
-                area: ['520px', '330px'],
-                btn: ['发布', '取消'],
-                btnAlign: 'c',
-                closeBtn: 1,
-                shadeClose: true,
-                skin: 'head-class',
-                content: 'biangeng_layer3.html'
             });
         });
     </script>
