--- a/third_html4_zstj.html
+++ b/third_html4_zstj.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>html4_知识编辑</title>
+    <title>html4_知识新建</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -1328,7 +1328,7 @@
                             <div class="list-title title-01">
                                 <div class="tab_menu">
                                     <ul>
-                                        <li class="active">编辑知识</li>
+                                        <li class="active">新建知识</li>
                                     </ul>
                                     <div class="zs_title">
                                         <label for="">知识编号:</label>
@@ -1366,7 +1366,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="zs_content" style="border:none;padding-top:10px;min-height:380px;">
+                                <div class="zs_content" style="border:none;padding-top:10px;">
                                     <div>
                                         <label for="">知识内容</label>
                                     </div>
